tests/NormalTests/paczka1/fuzzy1/65303418.err
Error in line 2: CK2VcClQ A71 14,3
Error in line 12: XXKBsS32DMk S153 10,5
Error in line 8: CK2VcClQ A7 54,4
Error in line 7: CRGN A790 103,2
Error in line 17: CRGN A71 42,1
Error in line 23: X57M A71 62,8
Error in line 20: CRGN A7 99,7
Error in line 31: X57M S153 73,5
Error in line 36: A71 A71 32,1
Error in line 35: CK2VcClQ A71 20,9
